<resources>
    <string name="app_name">iCook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">iCook</string>
    <string name="nav_header_subtitle">Cocinando contigo.</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_fav">Favoritos</string>
    <string name="action_rated">Valorados</string>
    <string name="action_firsts">Entrantes</string>
    <string name="action_second">Principales</string>
    <string name="action_last">Postres</string>

    <string name="action_preferences">Preferencias</string>
    <string name="action_add_receipe">Añadir receta</string>
    <string name="action_xml_reader">Cargar XML</string>

    <string name="recetas">Recetas:</string>

    <string name="action_change">Modificar</string>
    <string name="action_delete">Eliminar</string>


    <string name="lbl_preparacion">Preparacion</string>
    <string name="lbl_Ingredientes">Ingredientes</string>
    <string name="lbl_Valora">Valora:</string>

    <string name="btn_SacarFoto">Sacar Foto</string>
    <string name="lbl_nom">Introduzca nombre:</string>
    <string name="lbl_ing">Introduzca ingredientes:</string>
    <string name="lbl_prep">Introduzca preparacion:</string>
    <string name="lbl_tipo">Seleccione el tipo:</string>

    <string name="eliminar">¿Desea eliminar la receta?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>

    <string name="buscar">Buscar</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>

    <string name="dieta">Dieta:</string>

    <string name="veget">Vegetariana</string>
    <string name="vegan">Vegana</string>
    <string name="all">Onmivora</string>


</resources>