<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1,2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Menu_Principal_iCook"
    tools:showIn="@layout/activity_principal"
    >

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <Button
            android:id="@+id/btn_entrantes"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:drawableTop="@drawable/ic_fin_entrantes"
            android:padding="20dp"
            android:text="@string/action_firsts"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="179dp" />

        <Button
            android:id="@+id/btn_principales"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:drawableTop="@drawable/ic_fin_principal"
            android:padding="20dp"
            android:text="@string/action_second"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="179dp" />

        <Button
            android:id="@+id/btn_postres"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:drawableTop="@drawable/ic_fin_postre"
            android:padding="20dp"
            android:text="@string/action_last"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="179dp" />
    </TableRow>

    <Button
        android:id="@+id/btn_fav"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_fin_fav"
        android:text="@string/action_fav"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />



</TableLayout>
